--- a/_BookStore/Views/Category/Delete.cshtml
+++ b/_BookStore/Views/Category/Delete.cshtml
@@ -1,26 +1,24 @@
 ﻿@model Category
 
 <form method="post">
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
-            <hr/>
+            <h2 class="text-primary">Delete Category</h2>
+            <hr />
         </div>
-        <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3 row p-1 col-md-6">
             <label asp-for="Name" class="p-1 text-uppercase"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" class="form-control" disabled/>
         </div>
         <div class="mb-3 row p-1 col-md-6">
             <label asp-for="DisplayOrder" class="p-1 text-uppercase"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" class="form-control" disabled />
         </div>
 
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control">Go back to Lists</a>
@@ -29,10 +27,3 @@
     </div>
 
 </form>
-
-@section Scripts
-{
-    @{
-        <partial name="_ValidationScriptsPartial" />
-    }
-}
