--- a/_BookStore/Views/Category/Edit.cshtml
+++ b/_BookStore/Views/Category/Edit.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Category
 
 <form method="post">
+    <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
-            <hr/>
+            <h2 class="text-primary">Edit Category</h2>
+            <hr />
         </div>
         <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3 row p-1 col-md-6">
@@ -20,7 +21,7 @@
 
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-primary form-control">Update</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control">Go back to Lists</a>
@@ -31,7 +32,7 @@
 </form>
 
 @section Scripts
-{
+    {
     @{
         <partial name="_ValidationScriptsPartial" />
     }
