--- a/_BookStore/Views/Category/Index.cshtml
+++ b/_BookStore/Views/Category/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<Category>
 
+
 <div class="container">
     <div class="row pt-4 pb-4">
         <div class="col-6">
@@ -12,21 +13,32 @@
         </div>
     </div>
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Catogory Name</th>
-            <th>Display Order</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var obj in Model.OrderBy(u=>u.Name))
-        {
+    <table class="table table-bordered table-striped">
+        <thead>
             <tr>
-                <td>@obj.Name</td>
-                <td>@obj.DisplayOrder</td>
+                <th class="text-uppercase">Category Name</th>
+                <th class="text-uppercase">Display Order</th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var obj in Model.OrderBy(u => u.Name))
+            {
+                <tr>
+                    <td>@obj.Name</td>
+                    <td>@obj.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" , asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Edit
+                            </a>
+                            <a asp-controller="Category" , asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash3"></i> Delete
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
