separated the work by adding individual projects

--- a/_BookStore/Views/Shared/_Layout.cshtml
+++ b/_BookStore/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     </div>
 
     <footer class="border-top footer bg-primary text-muted ">
-        <div class="text-center text-bg-primary">
+        <div class="text-center">
             &copy; 2023 - BookStore <i class="bi bi-suit-heart"></i> Keep Learning !!!
         </div>
     </footer>
